cargo-features = ["edition"]

[package]
edition = '2018'
name = "blogee"
version = "0.1.0"
authors = ["tareifz <root@tareifz.me>"]

[dependencies]
actix = "0.5.7"
actix-web = "0.6"
actix-web-httpauth = "0.0.1"
env_logger = "0.5"

futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

juniper = "0.10"

diesel = { version = "1.3.2", features = ["sqlite", "r2d2", "chrono"] }
chrono = "0.4"

dotenv = "0.13.0"
num_cpus = "1.8.0"